--- a/protobuf.pc.in
+++ b/protobuf.pc.in
@@ -2,11 +2,12 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+libext=.@libext@
 
 Name: Protocol Buffers
 Description: Google's Data Interchange Format
 Version: @VERSION@
 Libs: -L${libdir} -lprotobuf @PTHREAD_CFLAGS@ @PTHREAD_LIBS@
-Libs.private: @LIBS@
+Libs.private: @LIBS@ -L${libdir}/libprotobuf${libext}
 Cflags: -I${includedir} @PTHREAD_CFLAGS@
 Conflicts: protobuf-lite
